--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,7 +1,8 @@
 {% extends 'base/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}Home{% endblock %}
+{% block navbar %} {% include 'base/navbar.html' %} {% endblock %}
 
 {% block content %}
 <section>
