T0.7 - Diseñar html base de la página

--- a/src/template/base/footer.html
+++ b/src/template/base/footer.html
@@ -1,6 +1,38 @@
 {% load static %}
-<section>
-    <footer>
-        
-    </footer>
-</section>
+<footer id="footer">    
+    <div class="footer-widgets-wrap">
+        <div class="container text-center">    
+            <div class="row">
+                <div class="col-sm-4 col-md-4">
+                    <div class="footer-content">
+                    <h4>LOREN IPSUM IS SIMPLY DUMMY</h4>
+                    <div class="footer-socials">
+                        <a href="#"><i class="fa fa-user"></i></a>
+                        <a href="#"><i class="fa fa-user"></i></a>
+                        <a href="#"><i class="fa fa-user"></i></a>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-4">
+                    <div class="footer-content">
+                    <h4>DATOS GENERALES</h4>
+                    <p>Lorem Ipsum is simply dummy text<br>
+                    Othervilla AB 6007, Other</p>
+                    <p>Lorem Ipsum is simply dummy text<br>
+                    <a href="#">Lorem Ipsum is simply dummy text</a><br>
+                    Lorem Ipsum is simply dummy text</p>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-4">
+                    <div class="footer-content">
+                        <h4>CONTACTANOS</h4>
+                        <p>¿Necesitas ayuda? <br>Puedes escribirnos tus dudas y/o inquietudes al siguiente correo: <b>soporte_mi_estacionamiento@gmail.com</b></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="footer-bottom text-center">
+        <p>©2021 Mi estacionamiento  -  Gestión Agil de Proyecto</a></p>
+    </div>
+</footer>
