--- a/src/template/index.html
+++ b/src/template/index.html
@@ -5,8 +5,90 @@
 {% block navbar %} {% include 'base/navbar.html' %} {% endblock %}
 
 {% block content %}
-<section>
-    
+<section class="index-content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="title text-center" style="color:white;">Politicas</h3>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="text-center services-item politicas-card">
+                    <div class="col-wrapper">
+                    <div class="icon-border"> 
+                        <i class="icon-design-graphic-tablet-streamline-tablet color-l-orange"></i> 
+                    </div>
+                    <h5>Loren Ipsum</h5>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+            <div class="text-center services-item politicas-card ">
+                <div class="col-wrapper">
+                <div class="icon-border"> 
+                    <i class="icon-design-pencil-rule-streamline color-l-blue"></i> 
+                </div>
+                <h5>Loren Ipsum</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+            </div>
+
+            <div class="col-sm-4">
+            <div class="text-center services-item politicas-card ">
+                <div class="col-wrapper">
+                <div class="icon-border"> 
+                    <i class="icon-speech-streamline-talk-user color-l-yellow"></i> 
+                </div>
+                <h5>Loren Ipsum</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-4">
+            <div class="text-center services-item politicas-card ">
+                <div class="col-wrapper">
+                <div class="icon-border"> 
+                    <i class="icon-settings-streamline-2 color-l-purple"></i> 
+                </div>
+                <h5>Loren Ipsum</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+            </div>
+
+            <div class="col-sm-4">
+            <div class="text-center services-item politicas-card ">
+                <div class="col-wrapper">
+                <div class="icon-border"> 
+                    <i class="icon-streamline-umbrella-weather color-l-pink"></i> 
+                </div>
+                <h5>Loren Ipsum</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+            </div>
+
+            <div class="col-sm-4">
+            <div class="text-center services-item politicas-card ">
+                <div class="col-wrapper">
+                <div class="icon-border"> 
+                    <i class="icon-caddie-shopping-streamline color-l-green"></i> 
+                </div>
+                <h5>Loren Ipsum</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
 </section>
 {% endblock%}
 
