--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,31 +1,3 @@
-/*
-	Delex by TEMPLATE STOCK
-	templatestock.co @templatestock
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-*/
-
-
-/* TABLE OF CONTENTS
-	1) Reset
-	2) Help classes
-	3) Pre-loader
-	4) Parallax
-	5) Navigation
-	6) Home
-	7) Services
-	8) Twitter-tweets
-	9) Contact
-	10) Footer
-	11) Responsive
-	12) Back-to-top
-*/
-
-
-
-
-/* 1 Reset
------------------------------------------------------------------------------ */
-
 html,body {
   height: 100%;
 }
@@ -216,69 +188,10 @@ section {
     position:absolute;
     left:50%; 
     top:50%; 
-    background-image:url(../images/preloader.gif); 
+    background-image:url(../img/preloader.gif); 
     background-repeat:no-repeat;
     background-position:center;
     margin:-100px 0 0 -100px; 
-}
-
-
-/* 4 Parallax
------------------------------------------------------------------------------ */
-.parallax {
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    width: 100%;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-/* 5 Navigation
------------------------------------------------------------------------------ */
-.navbar-custom {
-	background: transparent;
-	margin-bottom: 0px;
-	z-index: 1000;
-	border: none;
-	color: #333;
-	position: fixed;
-	transition: background-color 1s ease-in-out, border 1s ease-in-out;
-	-moz-transition: background-color 1s ease-in-out, border 1s ease-in-out;
-	-webkit-transition: background-color 1s ease-in-out, border 1s ease-in-out;
-	-o-transition: background-color 1s ease-in-out, border 1s ease-in-out;
-}
-.navbar-custom .navbar-brand,.navbar-custom .navbar-brand:hover {
-	color: #ffffff;
-	padding: 30px 15px;
-	font-size: 22px;
-	font-weight: 700;
-	font-family: 'Kameron', serif;
-}
-.small .navbar-brand,.small .navbar-brand:hover {
-	color: #333;
-}
-.navbar-custom .nav {
-	padding: 15px 0px;
-}
-.navbar-custom .navbar-nav>li>a {
-	color: #e3e3e3;
-    font-size: 14px;
-    text-transform: uppercase;
-}
-.small .navbar-nav>li>a {
-	color: #000;
-}
-nav.small {
-   background-color: #fff;
-   -moz-box-shadow: 0 3px 5px rgba(0,0,0,.1);
-   -webkit-box-shadow: 0 3px 5px rgba(0,0,0,.1);
-   box-shadow: 0 3px 5px rgba(0,0,0,.1);
-}
-.navbar-custom .navbar-nav>.active>a, .navbar-custom .navbar-nav>.active>a:hover, .navbar-custom .navbar-nav>.active>a:focus,
-.navbar-custom .navbar-nav>.open>a, .navbar-custom .navbar-nav>.open>a:hover, .navbar-custom .navbar-nav>.open>a:focus,
-.navbar-custom .navbar-nav>li>a:hover, .navbar-custom .navbar-nav>li>a:focus {
-	background-color: transparent;
 }
 
 /* 6 Home
@@ -325,15 +238,7 @@ nav.small {
 .home__header-content a.btn-default {
 	margin-top: 15px;
 }
-/*--- Carousel --*/
-#main-home-carousel .intro-title {
-	font-family: 'Kameron', serif;
-}
-#main-home-carousel .intro-text {
-	color: #cacaca;
-	font-weight: 300;
-	margin-bottom: 30px;
-}
+
 
 /* 7 Services
 ----------------------------------------------------------------------------- */
@@ -351,44 +256,6 @@ nav.small {
 	text-transform: uppercase;
 }
 
-/* 11 Twitter-tweets
------------------------------------------------------------------------------ */
-#twitter_tweet {
-	background: url(../images/pattern1.png), url(../images/bg-4.jpg);
-}
-.twitter_tweet h5{
-    font-weight: 300;
-    line-height: 20px;
-    color: rgba(255,255,255,0.77);
-}
-.twitter_tweet i{
-    font-size: 30px;
-}
-
-
-/* 13 Contact
------------------------------------------------------------------------------ */
-.form-main {
-	padding-top: 30px;
-}
-.error {
-	margin: 8px 0px;
-	display: none;
-	color: red;
-}
-#ajaxsuccess {
-	font-size: 16px;
-	width: 100%;
-	display: none;
-	clear: both;
-	margin: 8px 0px;
-}
-#contact .con_sub_text {
-	margin-top: 20px;
-}
-#contact textarea.form-control{
-	height: 120px;
-}
 
 /* 14 Footer
 ----------------------------------------------------------------------------- */
@@ -576,7 +443,23 @@ ul.pattern .color12 {
 }
 
 @media only screen and (max-width: 479px) {
-#style-switcher {
-    display: none;
+	#style-switcher {
+		display: none;
+	}
 }
+
+.index-content {
+	background-color: rgba(0,0,0,0.8);
+	background-image: url(../img/background-santiago.jpg);
+}
+
+.politicas-card {
+	background-color: white;
+	border-radius: 40px;
+	opacity: 0.8;
+}
+
+.buscador-principal {
+	border-radius: 6px;
+	height: 34px !important;
 }
