--- a/src/template/base/navbar.html
+++ b/src/template/base/navbar.html
@@ -14,9 +14,9 @@
           </li>
           <li class="nav-link dropdown">
             <a data-toggle="dropdown" href="#">Ingresar
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu text-left">
               <li><a class="nav-link fa fa-user" href="#"> Arrendador</a></li>
-              <li><a class="nav-link fa fa-stering-wheel" href="#"> Conductor</a></li>
+              <li><a class="nav-link fa fa-car" href="#"> Conductor</a></li>
             </ul>
           </li>
         </ul>
