--- a/src/template/estacionamientos/administrar_estacionamiento.html
+++ b/src/template/estacionamientos/administrar_estacionamiento.html
@@ -2,10 +2,13 @@
 {% load static %}
 
 {% block title %}Estacionamientos{% endblock %}
+{% block navbar %} {% include 'base/navbar.html' %} {% endblock %}
 
 {% block content %}
-<section>
-  
+<section class="index-content">
+    <div class="container">
+
+    </div>
 </section>
 {% endblock%}
 
