T2.3 Diseño html detalle de estacionamiento privado, ademas se agregaron las dependencias al urls y views

--- a/src/template/estacionamientos/administrar_estacionamiento.html
+++ b/src/template/estacionamientos/administrar_estacionamiento.html
@@ -7,7 +7,7 @@
 {% block content %}
 <section class="index-content">
     <div class="container">
-
+        <h1>hola mundo </h1>
     </div>
 </section>
 {% endblock%}
