Modulo completo estacionamiento particular

--- a/src/template/estacionamientos/disponibilidad_estacionamiento.html
+++ b/src/template/estacionamientos/disponibilidad_estacionamiento.html
@@ -35,7 +35,7 @@
                             </th>
                             <td> Calle 5 de abril #1234</td>
                             <td> 2 Estacionamiento disponible </td>
-                            <td> Ṕarticular </td>
+                            <td> Particular </td>
                         </tr>
                     </tbody>
                 </table>
