--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -463,3 +463,29 @@ ul.pattern .color12 {
 	border-radius: 6px;
 	height: 34px !important;
 }
+
+.formulario{
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Times New Roman', Times, serif;
+}
+.form-row{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+.formulario td{
+    padding-left: 20px;
+}
+.formulario label{
+    font-size: 10px;
+}
+.form-group label{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+}
+.formulario input select{
+    margin-right: 60px;
+}
