--- a/src/template/base/navbar.html
+++ b/src/template/base/navbar.html
@@ -1,16 +1,21 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg bg-light">
-    <a class="navbar-brand mr-4" href="#">Mi estacionamiento</a>
+    <a class="navbar-brand mr-4" href="/">
+      <h2>Mi estacionamiento</h2>
+    </a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="/">Inicio</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/estacionamiento/disponibilidad">Disponibilidad</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/estacionamiento/privado">Estacionamiento Privados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/estacionamiento/particular">Estacionamiento Particular</a>
+            <a class="nav-link" href="/estacionamiento/particular/listar">Estacionamiento Particular</a>
           </li>
           <li class="nav-link dropdown">
             <a data-toggle="dropdown" href="#">Ingresar
