--- a/src/template/estacionamientos/estacionamiento_disponibilidad_eliminar.html
+++ b/src/template/estacionamientos/estacionamiento_disponibilidad_eliminar.html
@@ -18,7 +18,7 @@
                         <img src="{% static 'img/eliminar.png' %}" alt="Eliminar disponibilidad" style="height: 250px; width: 250px;">
                     </div>
                     <div>
-                        <a class= "btn btn-dark" href="/estacionamiento/disponibilidad/{{id_estacionamiento}}/">No, Volver</a>
+                        <a class= "btn btn-dark" href="/estacionamiento/{{id_estacionamiento}}/disponibilidad/">No, Volver</a>
                         <button class="btn btn-danger" type="submit">Sí, Eliminar</button>
                     </div>
                 </form>  
