--- a/src/template/estacionamientos/estacionamiento_disponibilidad_agregar.html
+++ b/src/template/estacionamientos/estacionamiento_disponibilidad_agregar.html
@@ -16,7 +16,7 @@
                     {% csrf_token %}
                     {{ form.as_p }}
                     <div>
-                        <a class="btn btn-secondary" href="/estacionamiento/disponibilidad/{{id_estacionamiento}}/">Volver</a>
+                        <a class="btn btn-secondary" href="/estacionamiento/{{id_estacionamiento}}/disponibilidad/">Volver</a>
                         <button class="btn btn-success" type="submit">Agregar</button>
                     </div>
                 </form>
