--- a/src/template/base/base.html
+++ b/src/template/base/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,30 +19,42 @@
     <!-- Template Styles-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
-</head>
-<body>
-<body data-spy="scroll" data-offset="80">
-  <div class="animationload">
-    <div class="loader">
-        Please Wait....
+
+
+    <!--JQuery + Jquery validate-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
+    <script src="{% static 'js/run-chileno.js' %}"></script>
+    <script type="text/javascript">
+      jQuery(document).ready(function($) {
+        $("#id_rut").rut();
+      });
+    </script>
+  </head>
+  <body data-spy="scroll" data-offset="80">
+    <div class="animationload">
+      <div class="loader">
+          Please Wait....
+      </div>
     </div>
-  </div>
-  {% block navbar %}{% endblock %}
+    {% block navbar %}{% endblock %}
 
-  {% block content %} {% endblock %}
+    {% block content %} {% endblock %}
 
-  {% block footer %}{% endblock %}
+    {% block footer %}{% endblock %}
 
-  <a href="#" class="back-to-top"> <i class="fa fa-chevron-up"> </i> </a>
-  <!-- initialize jQuery Library -->
-  <script src="{% static 'js/jquery.min.js' %}"></script>
-  <!-- jquery easing -->
-  <script src="{% static 'js/jquery.easing.min.js' %}"></script>
-  <!-- Bootstrap -->
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  <!-- Counter-up -->
-  <script src="{% static 'js/waypoints.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'js/jquery.counterup.min.js' %}" type="text/javascript"></script>
-  <!-- App JS -->
-  <script src="{% static 'js/app.js' %}"></script>
+    <a href="#" class="back-to-top"> <i class="fa fa-chevron-up"> </i> </a>
+    <!-- initialize jQuery Library -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <!-- jquery easing -->
+    <script src="{% static 'js/jquery.easing.min.js' %}"></script>
+    <!-- Bootstrap -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- Counter-up -->
+    <script src="{% static 'js/waypoints.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.counterup.min.js' %}" type="text/javascript"></script>
+    <!-- App JS -->
+    <script src="{% static 'js/app.js' %}"></script>
+    {% block scripts %} {% endblock %}
+  </body>
 </html>
