--- a/src/template/estacionamientos/estacionamiento_particular_agregar.html
+++ b/src/template/estacionamientos/estacionamiento_particular_agregar.html
@@ -15,6 +15,9 @@
                 <form method="POST" class="formulario" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
+                    <input class="form-control" id="id_tipo_estacionamiento" type="text" name="tipo_estacionamiento" value="1" hidden>
+                    <input class="form-control" id="id_comuna_estacionamiento" type="text" name="comuna_estacionamiento" value="3" hidden>
+                    <input class="form-control" id="id_estado_estacionamiento" type="text" name="estado_estacionamiento" value="1" hidden>
                     <div>
                         <a class="btn btn-secondary" href="/estacionamiento/particular/listar/">Volver</a>
                         <button class="btn btn-success" type="submit">Agregar</button>
@@ -25,5 +28,17 @@
     </div>
 </section>
 {% endblock%}
-
+{% block scripts %}
+<script>
+    console.log("Se inicia!")
+    //document.getElementById("id_tipo_estacionamiento").selectedIndex = "1"; 
+    document.getElementById("id_tipo_estacionamiento").value = "1"; 
+    //document.getElementById("id_tipo_estacionamiento").setAttribute("disabled", true);
+    $('#id_tipo_estacionamiento').attr("disabled", true); 
+    document.getElementById("id_comuna_estacionamiento").value = "3"; 
+    document.getElementById("id_comuna_estacionamiento").setAttribute("disabled", true);
+    document.getElementById("id_estado_estacionamiento").value = "1"; 
+    document.getElementById("id_estado_estacionamiento").setAttribute("disabled", true);
+</script>
+{% endblock %}
 {% block footer %} {% include 'base/footer.html' %} {% endblock %}
