--- a/src/template/estacionamientos/disponibilidad_estacionamiento.html
+++ b/src/template/estacionamientos/disponibilidad_estacionamiento.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
-                <h1>Detalle Disponibilidad</h1>
+                <h1>Estacionamientos disponibles</h1>
             </div>
             <div class="card-body">
                 <table class="table table-striped table-dark text-light text-center">
