--- a/src/template/estacionamientos/disponibilidad_estacionamiento_detalles.html
+++ b/src/template/estacionamientos/disponibilidad_estacionamiento_detalles.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
-                <h1>Disponibilidad</h1>
+                <h1>Detalle de estacionamientos disponibles</h1>
             </div>
             <div class="card-body">
                 {% if estacionamiento %}
