--- a/src/template/estacionamientos/estacionamiento_privado_editar.html
+++ b/src/template/estacionamientos/estacionamiento_privado_editar.html
@@ -13,19 +13,31 @@
             </div>
             <div class="card-body">
                 <form method="POST" enctype="multipart/form-data" class="formulario">
-                    <div class="formulario">
                         {% csrf_token %}
                         {{ form.as_p }}
+                        <input class="form-control" id="id_user" type="text" name="user" value="{{estacionamiento.user.id}}" hidden>
+                        <input class="form-control" id="id_tipo_estacionamiento" type="text" name="tipo_estacionamiento" value="1" hidden>
+                        <input class="form-control" id="id_comuna_estacionamiento" type="text" name="comuna_estacionamiento" value="3" hidden>
+                        <input class="form-control" id="id_estado_estacionamiento" type="text" name="estado_estacionamiento" value="1" hidden>
                         <div>
                             <a class="btn btn-secondary" href="/estacionamiento/privado/listar">Volver</a>
                             <button class="btn btn-success" type="submit">Editar</button>
                         </div>
-                    </div>
                 </form>
             </div>
         </div>
     </div>
 </section>
 {% endblock%}
-
+{% block scripts %}
+<script>
+    document.getElementById("id_user").setAttribute("disabled", true);
+    document.getElementById("id_tipo_estacionamiento").value = "1"; 
+    $('#id_tipo_estacionamiento').attr("disabled", true); 
+    document.getElementById("id_comuna_estacionamiento").value = "3"; 
+    document.getElementById("id_comuna_estacionamiento").setAttribute("disabled", true);
+    document.getElementById("id_estado_estacionamiento").value = "1"; 
+    document.getElementById("id_estado_estacionamiento").setAttribute("disabled", true);
+</script>
+{% endblock %}
 {% block footer %} {% include 'base/footer.html' %} {% endblock %}
