--- a/src/template/estacionamientos/bloques/disponibilidad_estacionamiento_bloques.html
+++ b/src/template/estacionamientos/bloques/disponibilidad_estacionamiento_bloques.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}Bloque{% endblock %}
+{% block title %}Bloque Disponibilidad{% endblock %}
 {% block navbar %} {% include 'base/navbar.html' %} {% endblock %}
 
 {% block content %}
@@ -17,13 +17,14 @@
                 <tr>
                     <td>${{ disponibilidad.precio_bloque }}</td>
                 </tr>
-            {% endfor %}
+                {% endfor %}
                     <table class="table table-striped table-dark text-light text-center">
                         <thead>
                             <tr>
                                 <th scope="col">DISPONIBILIDAD</th>
                                 <th scope="col">BLOQUE INICIO</th>
                                 <th scope="col">BLOQUE TERMINO</th>
+                                <th scope="col">PRECIO BLOQUE</th>
                                 <th scope="col">ACCION</th>
                             </tr>
                         </thead>
@@ -34,6 +35,7 @@
                                         <td>{{ bloque.disponibilidad.fecha_disponibilidad }}</td>
                                         <td>{{ bloque.bloque_inicio }}</td>
                                         <td>{{ bloque.bloque_termino }}</td>
+                                        <td>${{ bloque.disponibilidad.precio_bloque }}</td>
                                         <td>
                                             <a class="btn btn-primary" href="" role="button">Reservar</a> 
                                         </td>
