--- a/src/template/estacionamientos/disponibilidad_estacionamiento.html
+++ b/src/template/estacionamientos/disponibilidad_estacionamiento.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}Particulares{% endblock %}
+{% block title %}Estacionamientos Disponibles{% endblock %}
 {% block navbar %} {% include 'base/navbar.html' %} {% endblock %}
 
 {% block content %}
