--- a/src/template/estacionamientos/disponibilidad_estacionamiento.html
+++ b/src/template/estacionamientos/disponibilidad_estacionamiento.html
@@ -18,6 +18,7 @@
                             <th scope="col">Tipo</th>
                             <th scope="col">Direccion</th>
                             <th scope="col">Comuna</th>
+                            <th scope="col">Precio Base</th>
                             <th scope="col">Categoria</th>
                             <th scope="col">Acciones</th>
                         </tr>
@@ -29,6 +30,7 @@
                                     <td>{{ estacionamiento.tipo_estacionamiento }}</td>
                                     <td>{{ estacionamiento.calle }} {{ estacionamiento.numeracion }}</td>
                                     <td>{{ estacionamiento.comuna_estacionamiento }} </td>
+                                    <td>${{ estacionamiento.precio_base }}</td>
                                     <td>{{ estacionamiento.categoria_estacionamiento }}</td>
                                     <td>
                                         <a class="btn btn-warning" href="/estacionamiento/{{ estacionamiento.id }}/disponibilidad_detalle/" role="button">DETALLE  </a>
